# libra2-indexer-processors-v2

./: .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/actions/dep_install_and_lint/: action.yaml
.github/actions/docker-setup/: action.yaml
.github/actions/rust-setup/: action.yaml
.github/workflow/: lint.yaml
.github/workflows/: build-images.yaml  copy-processor-images-to-dockerhub.yaml  integration-tests.yaml  lint.yaml  nightly-integration-tests.yaml  runs-on.yml  test-coverage.yaml  update-sdk-dependency.yaml
hasura-api/metadata-json/: unified.json
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs
integration-tests/src/diff_test_helper/: account_restoration_processor.rs  account_transaction_processor.rs  ans_processor.rs  default_processor.rs  event_processor.rs  fungible_asset_processor.rs  mod.rs  objects_processor.rs  stake_processor.rs  token_v2_processor.rs  user_transaction_processor.rs
integration-tests/src/models/: account_restoration_models.rs  account_transaction_models.rs  ans_models.rs  default_models.rs  events_models.rs  fa_v2_models.rs  mod.rs  objects_models.rs  stake_models.rs  token_v2_models.rs  user_transaction_models.rs
integration-tests/src/sanity_test/: mod.rs  sanity_tests.rs
integration-tests/src/sdk_tests/: account_restoration_processor_tests.rs  account_transaction_processor_tests.rs  ans_processor_tests.rs  default_processor_tests.rs  events_processor_tests.rs  fungible_asset_processor_tests.rs  keyless_backup_txn.json  mod.rs  objects_processor_tests.rs  stake_processor_tests.rs  token_v2_processor_tests.rs  user_transaction_processor_tests.rs
processor/: Cargo.toml  example-backfill-config.yaml  example-config.yaml  example-testing-config.yaml
processor/src/: lib.rs  main.rs
processor/src/bq_analytics/: mod.rs
processor/src/config/: indexer_processor_config.rs  mod.rs  processor_config.rs  processor_mode.rs
processor/src/db/: backfill_processor_status.rs  ledger_info.rs  mod.rs  processor_status.rs  property_map.rs  resources.rs  schema.rs
processor/src/parquet_processors/: example-parquet-config.yaml  mod.rs  parquet_account_transactions_processor.rs  parquet_ans_processor.rs  parquet_default_processor.rs  parquet_events_processor.rs  parquet_fungible_asset_processor.rs  parquet_objects_processor.rs  parquet_processor_status_saver.rs  parquet_stake_processor.rs  (+3 more)
scripts/: README.md  build_and_push_images.sh  get_changes_since_commit.sh  package.json  pnpm-lock.yaml  release-processor-images.mjs  rust_lint.sh
src/: Cargo.toml
src/processor/: Cargo.toml
src/processor/src/: lib.rs
src/processor/src/bq_analytics/: generic_parquet_processor.rs  mod.rs
src/processor/src/db/: mod.rs
src/processor/src/db/models/: mod.rs
src/processor/src/db/models/ans_models/: ans_lookup_v2.rs  ans_primary_name_v2.rs
(+459 files in other folders)
