[workspace]

members = [
    "processor",
]

[package]
name = "aptos-indexer-processors-v2"
version = "0.1.0"
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-indexer-processors"
rust-version = "1.78"

[workspace.dependencies]
ahash = { version = "0.8.7", features = ["serde"] }
allocative = "0.3.3"
allocative_derive = "0.3.3"
anyhow = "1.0.86"
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "1d8460a995503574ec4e9699d3442d0150d7f3b9" }
bigdecimal = { version = "0.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
const_format = "0.2.33"
diesel = { version = "2.1", features = ["chrono", "postgres", "numeric", "serde_json"] }
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "d02798c67065d763154d7272dd0c09b39757d0f2", features = ["postgres", "bb8"] }
field_count = "0.1.1"
indexmap = { version = "2.7.0", features = ["serde"] }
parquet = { version = "52.0.0", features = ["async"] }
parquet_derive = { version = "52.0.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.34"